--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Boost Theme</title>
+  <script src="https://kit.fontawesome.com/d0eadf9629.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-sm navbar-light mt-2">
@@ -18,7 +19,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse"id="navmenu">
-        <ul class="navbar-nav d-flex justify-content-between ms-auto fs-6 fw-bold text-secondary ">
+        <ul class="navbar-nav d-flex justify-content-between align-items-center ms-auto fs-6 fw-bold text-secondary ">
           <li class="nav-item">
             <a href="#" class="nav-link">PAGES </a>
           </li>
@@ -28,29 +29,150 @@
           <li class="nav-item">
             <a href="#" class="nav-link">DOCS </a>
           </li>
-          <div class="container ">
-            <button class="btn btn-primary ms-3" type="button">Button</button>
+          <li class="nav-item">
+            <button class="btn btn-primary ms-3 shadow  rounded-pill py-2 px-4 fw-bold" type="button">BUY NOW</button>
+          </li>
         </ul>
         </div>
       </div>
-    </div>
   </nav>
-  <section class="p-5 mt-5">
+  <section class="p-5 mt-5 main-section">
     <div class="container ">
-      <div class="d-flex justify-content-between">
-        <div class="text-start">
-          <h1 class="fs-1">Boost your digital presence
-          </h1>
-          <p class="lead fs-3 text-secondary t">
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="text-start ">
+          <h1>Boost your digital presence</h1>
+          <p class="lead fs-3 text-secondary my-3">
             Build an awesome website with a clean and accessible Bootstrap theme.
           </p>
+          <button type="button" class="btn btn-primary btn-lg shadow  rounded-pill px-4 py-2">VIEW ALL PAGES</button>
+          <a href="#" class="  text-decoration-none text-secondary fs-5  ms-3 border-bottom border-2 border-primary text-uppercase ">documentation</a>
         </div>
         <img class="img-fluid d-none d-lg-block w-50" src="imgs/undraw_attached_file_re_0n9b.svg" alt="">
       </div>
     </div>
-
   </section>
-  
+  <section class="cards-section container p-5 ">
+    <div class="row row-cols-1 row-cols-md-2  mx-auto ">
+      <div class="col mb-4">
+        <div class="card shadow">
+          <a href="#">
+            <img src="imgs/undraw_Group_selfie_re_h8gb.svg" class="card-img-top w-5" alt="...">
+          </a>
+        </div>
+        <a class="text-decoration-none card-text  fs-4 mt-2  text-secondary" href="#">
+          <p class="text-center mt-2">APP</p>
+        </a>
+      </div>
+      <div class="col mb-4">
+        <div class="card shadow">
+          <a href="#">
+            <img src="imgs/undraw_Group_selfie_re_h8gb.svg" class="card-img-top w-5" alt="...">
+          </a>
+        </div>
+        <a class="text-decoration-none card-text  fs-4 mt-2  text-secondary" href="#">
+          <p class="text-center mt-2">APP</p>
+        </a>
+      </div>
+      <div class="col mb-4">
+        <div class="card shadow">
+          <a href="#">
+            <img src="imgs/undraw_Group_selfie_re_h8gb.svg" class="card-img-top w-5" alt="...">
+          </a>
+        </div>
+        <a class="text-decoration-none card-text  fs-4 mt-2  text-secondary" href="#">
+          <p class="text-center mt-2">APP</p>
+        </a>
+      </div>
+      <div class="col mb-4">
+        <div class="card shadow">
+          <a href="#">
+            <img src="imgs/undraw_Group_selfie_re_h8gb.svg" class="card-img-top w-5" alt="...">
+          </a>
+        </div>
+        <a class="text-decoration-none card-text  fs-4 mt-2  text-secondary" href="#">
+          <p class="text-center mt-2">APP</p>
+        </a>
+      </div>
+      <div class="text-center mx-auto mb-5">
+        <button type="button" class="btn btn-primary btn-lg shadow rounded-pill px-4 py-2 ">VIEW ALL PAGES</button>
+      </div>
+    </div>
+  </section>
+  <!-- grid icons section -->
+  <section  >
+    <div class="container ">
+        <div class="row row-cols-3  justify-content-between ">
+          <div class="col  mb-4">
+            <div class="card border-0">
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#0d6efd
+              " class="bi bi-person-fill rounded-circle bg-light p-2" viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              </svg>        
+                    <h5 class="card-title my-3 fs-3">Card title</h5>
+                <p class="card-text fs-5 lh-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, doloribus.</p>
+              </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card border-0">
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#0d6efd
+              " class="bi bi-person-fill rounded-circle bg-light p-2" viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              </svg>        
+                    <h5 class="card-title my-3 fs-3">Card title</h5>
+                <p class="card-text fs-5 lh-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, doloribus.</p>
+              </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card border-0">
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#0d6efd
+              " class="bi bi-person-fill rounded-circle bg-light p-2" viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              </svg>        
+                    <h5 class="card-title my-3 fs-3">Card title</h5>
+                <p class="card-text fs-5 lh-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, doloribus.</p>
+              </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card border-0">
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#0d6efd
+              " class="bi bi-person-fill rounded-circle bg-light p-2" viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              </svg>        
+                    <h5 class="card-title my-3 fs-3">Card title</h5>
+                <p class="card-text fs-5 lh-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, doloribus.</p>
+              </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card border-0">
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#0d6efd
+              " class="bi bi-person-fill rounded-circle bg-light p-2" viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              </svg>        
+                    <h5 class="card-title my-3 fs-3">Card title</h5>
+                <p class="card-text fs-5 lh-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, doloribus.</p>
+              </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card border-0">
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#0d6efd
+              " class="bi bi-person-fill rounded-circle bg-light p-2" viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              </svg>        
+                    <h5 class="card-title my-3 fs-3">Card title</h5>
+                <p class="card-text fs-5 lh-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, doloribus.</p>
+              </div>
+          </div>
+          
+      </div>
+    </div>
+  </section>
+<!--  accessibility section -->
+  <section>
+    <div class="container">
+      
+    </div>
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>
