--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
         </div>
       </div>
   </nav>
-  <section class="p-5 mt-5 main-section">
+  <section class="p-5 my-5 main-section">
     <div class="container ">
       <div class="d-flex justify-content-between align-items-center">
-        <div class="text-start ">
-          <h1>Boost your digital presence</h1>
-          <p class="lead fs-3 text-secondary my-3">
+        <div class="text-center text-lg-start">
+          <h1 class="display-2 my-3">Boost your digital presence</h1>
+          <p class="lead fs-3 text-secondary my-4">
             Build an awesome website with a clean and accessible Bootstrap theme.
           </p>
-          <button type="button" class="btn btn-primary btn-lg shadow  rounded-pill px-4 py-2">VIEW ALL PAGES</button>
-          <a href="#" class="  text-decoration-none text-secondary fs-5  ms-3 border-bottom border-2 border-primary text-uppercase ">documentation</a>
+            <button type="button" class="btn btn-primary btn-lg shadow  rounded-pill px-4 py-3">VIEW ALL PAGES</button>
+            <a href="#" class="  text-decoration-none text-secondary fs-5  ms-lg-3 border-bottom border-2 border-primary text-uppercase ">documentation</a>
         </div>
         <img class="img-fluid d-none d-lg-block w-50" src="imgs/undraw_attached_file_re_0n9b.svg" alt="">
       </div>
     </div>
   </section>
-  <section class="cards-section container p-5 ">
+  <section class="cards-section container px-5 ">
     <div class="row row-cols-1 row-cols-md-2  mx-auto ">
       <div class="col mb-4">
         <div class="card shadow">
@@ -99,9 +99,9 @@
     </div>
   </section>
   <!-- grid icons section -->
-  <section  >
+  <section class="p-5" >
     <div class="container ">
-        <div class="row row-cols-3  justify-content-between ">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3  justify-content-between ">
           <div class="col  mb-4">
             <div class="card border-0">
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#0d6efd
@@ -152,7 +152,7 @@
                 <p class="card-text fs-5 lh-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit, doloribus.</p>
               </div>
           </div>
-          <div class="col mb-4">
+          <div class="col mb-4" >
             <div class="card border-0">
               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#0d6efd
               " class="bi bi-person-fill rounded-circle bg-light p-2" viewBox="0 0 16 16">
@@ -166,12 +166,216 @@
       </div>
     </div>
   </section>
+  <div class="divider mx-auto"></div>
 <!--  accessibility section -->
-  <section>
-    <div class="container">
-      
+  <section class="container p-5"> 
+    <div class=" row justify-content-between align-items-center g-4 mb-5">
+      <div class="col-md-5">
+          <h4 class="fs-2">Accessibility-ready
+          </h4>
+          <p class="fs-5">Boost theme is navigable with keyboard, ready for screen readers and uses a high color contrast ratio.
+          </p>
+          <a href="#" class="text-decoration-none text-secondary fs-5  border-bottom border-2 border-primary">READ MORE</a>
+      </div>
+      <div class="col-md-6 shadow-lg">
+        <img src="imgs/vitruvian-man.png" class=" img-thumbnails" alt="">
+      </div>
+    </div>
+    <div class=" row  justify-content-between align-items-center g-4 mt-3">
+      <div class="col-md-6 
+      shadow-lg">
+        <img src="imgs/install.png" class=" img-thumbnails" alt="">
+      </div>
+      <div class="col-md-5 
+      ">
+          <h4 class="fs-2">Accessibility-ready
+          </h4>
+          <p class="fs-5">Boost theme is navigable with keyboard, ready for screen readers and uses a high color contrast ratio.
+          </p>
+          <a href="#" class="text-decoration-none text-secondary fs-5  border-bottom border-2 border-primary">READ MORE</a>
+      </div>
     </div>
   </section>
+  <section class="container py-5 mx-auto mt-5">
+    <div class="row">
+
+      <h2 class="text-center">
+        Choose the license that suits your needs
+      </h2>
+    </div>
+    <div class=" row  g-5 mt-3">
+      <div class=" col-md ">
+        <div class="card border-light border-5 rounded-3 mb-3 shadow-lg text-center">
+          <div class="card-header bg-white">
+            <h5 class="lead fs-2 mt-3 ">Standard</h5>
+            <p class=" fw-bold my-3 fs-3">59$</p>
+            <p class="text-secondary fs-5">Single Site</p>
+          </div>
+          <div class="card-body my-4">
+            <p class="card-text fs-5">
+              Use on one site
+            </p>
+            <p class="card-text fs-5">
+              Use for personal or a client
+            </p>
+            <p class="card-text fs-5">
+              Technical support
+            </p>
+            <button class="btn btn-outline-primary border-2 rounded-pill py-3 px-4 mt-4 fw-bold" type="button">BUY NOW</button>
+          </div>
+        </div>
+      </div>
+      <div class=" col-md ">
+        <div class="card  border-primary border-4 rounded-3 mb-3 shadow-lg text-center" >
+          <div class="card-header bg-white">
+            <h5 class="lead fs-2 mt-3">Standard</h5>
+            <p class=" fw-bold my-3 fs-3">59$</p>
+            <p class="text-secondary fs-5">Single Site</p>
+          </div>
+          <div class="card-body my-4">
+            <p class="card-text fs-5">
+              Use on one site
+            </p>
+            <p class="card-text fs-5">
+              Use for personal or a client
+            </p>
+            <p class="card-text fs-5">
+              Technical support
+            </p>
+            <button class="btn btn-primary border-2 rounded-pill py-3 px-4 mt-4 fw-bold" type="button">BUY NOW</button>
+          </div>
+        </div>
+      </div>
+      <div class=" col-md ">
+        <div class="card border-light border-5 rounded-3 mb-3 shadow-lg text-center" >
+          <div class="card-header bg-white">
+            <h5 class="lead fs-2 mt-3">Standard</h5>
+            <p class=" fw-bold my-3 fs-3">59$</p>
+            <p class="text-secondary fs-5">Single Site</p>
+          </div>
+          <div class="card-body my-4">
+            <p class="card-text fs-5">
+              Use on one site
+            </p>
+            <p class="card-text fs-5">
+              Use for personal or a client
+            </p>
+            <p class="card-text fs-5">
+              Technical support
+            </p>
+            <button class="btn btn-outline-primary border-2 rounded-pill py-3 px-4 mt-4 fw-bold" type="button">BUY NOW</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="divider mx-auto "></div>
+<section class="container py-5 ">
+  <h3 class="mb-5 text-center fs-2">
+    Questions
+  </h3>
+  <div class="row justify-content-center">
+    <div class="col-9">
+      <div class="accordion shadow-lg" id="accordionExample">
+        <div class="accordion-item ">
+          <h2 class="accordion-header " id="headingOne">
+            <button class="accordion-button py-4 fs-4 fw-bold " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Do I need to know how to code to use this theme?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body py-4 fs-5">
+              This is the first item's accordion body. It is shown by default, until the collapse plugin adds the appropriate classes that we  though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed py-4 fs-4 fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Can i use this theme for my clients?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body py-4 fs-5">
+              the overall appearance, as well as the showing and hiding via CSS transitions. any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed py-4 fs-4 fw-bold " type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Is it the best?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body py-4 fs-5">
+              You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+  
+<!-- footer -->
+<div class="container">
+  <footer class="pt-5">
+    <div class="row">
+      <div class="col-12 col-lg-4   mx-start">
+        <h5 class="fs-4">Boost Theme</h5>
+        <p class="fs-5 lead w-50">Lorem ipsum dolor sit amet consectetur </p>
+      </div>
+
+      <div class="col-6 col-md-3 col-lg-2">
+        <h5>Section</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+        
+        </ul>
+      </div>
+
+      <div class="col-6 col-md-3 col-lg-2">
+        <h5>Section</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+        </ul>
+      </div>
+
+      <div class="col-6 col-md-3 col-lg-2">
+        <h5 >Section</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+
+        </ul>
+      </div>
+      <div class="col-6 col-md-3 col-lg-2">
+        <h5>Section</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-between py-4 my-4 border-top">
+      <p class="text-center">© 2021 Company, Inc. All rights reserved.</p>
+      <ul class="list-unstyled d-flex">
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+      </ul>
+    </div>
+  </footer>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
